@@ -1,5 +1,5 @@
 version 0.60.5
-09/07/2018
+11/07/2018
 	- Added service layer to the search controller (margaretha)
 	- Added OAuth2 scope checking in search and VC controllers (margaretha)
 	- Added handling OAuth2 bearer token for VC access and User group controllers (margaretha)
@@ -8,6 +8,7 @@ version 0.60.5
 	- Added store access token in openID token service (margaretha)
 	- Fixed empty scope in openID authorization and token service (margaretha)
 	- Implemented storing authorization code in cache (margaretha)
+	- Fixed authentication time in authentication controller (margaretha)
 	
 version 0.60.4
 05/07/2018
